movie with celebrities